cmake_minimum_required(VERSION 3.10)
project(armor)
set(CXX_STANDARD_REQUIRED True)
set(CXX_STANDARD 11)
add_executable(armor main.cpp)

find_package(OpenCV REQUIRED)
if (OpenCV_FOUND)
    target_include_directories(armor PUBLIC ${OpenCV_INCLUDE_DIRS})
    target_link_libraries(armor ${OpenCV_LIBS})
else()
    message("OpenCV NOT FOUND!")
endif()
